<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" style="?attr/themedList"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/include_actionbar_simple" layout="@layout/actionbar_simple" />
    <EditText android:textSize="18.0sp" android:id="@id/masterpasswd_pass1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="40.0dip" android:hint="@string/masterpasswd_pass1_hint" android:layout_below="@id/include_actionbar_simple" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:inputType="textPassword" style="?attr/themedTextView" />
    <EditText android:textSize="18.0sp" android:id="@id/masterpasswd_pass2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:hint="@string/masterpasswd_pass2_hint" android:layout_below="@id/masterpasswd_pass1" android:layout_alignLeft="@id/masterpasswd_pass1" android:layout_alignRight="@id/masterpasswd_pass1" android:inputType="textPassword" style="?attr/themedTextView" />
    <RelativeLayout android:id="@id/relativeLayout3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/masterpasswd_pass2" android:layout_alignLeft="@id/masterpasswd_pass2" android:layout_alignRight="@id/masterpasswd_pass2">
        <CheckBox android:id="@id/masterpasswd_show" android:paddingLeft="@dimen/checkbox_padding_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="?themedCheckbox" android:text="@string/masterpasswd_show" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" style="?attr/themedList" />
        <Button android:id="@id/masterpasswd_ok" android:background="@drawable/blue_btn_simple" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/masterpasswd_ok" android:layout_below="@id/masterpasswd_show" android:layout_alignParentRight="true" android:onClick="btn_ok" />
    </RelativeLayout>
</RelativeLayout>
