<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/include_actionbar_simple" layout="@layout/actionbar_simple" />
    <ScrollView android:id="@id/sync_scroll" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/include_actionbar_simple" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" style="?attr/themedList">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" style="?attr/themedList">
            <TextView android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:text="@string/sync_features" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" style="?attr/themedList" />
            <Button android:id="@id/sync_btn_free" android:background="@drawable/blue_btn_simple" android:layout_width="300.0dip" android:layout_height="50.0dip" android:layout_marginBottom="10.0dip" android:text="@string/sync_free" android:layout_below="@id/sync_active_features" android:layout_alignLeft="@id/sync_btn_1month" android:onClick="btn_free" />
            <Button android:id="@id/sync_btn_1month" android:background="@drawable/blue_btn_simple" android:layout_width="300.0dip" android:layout_height="50.0dip" android:layout_marginBottom="10.0dip" android:text="@string/sync_1month" android:layout_below="@id/sync_btn_free" android:layout_centerHorizontal="true" android:onClick="btn_1month" />
            <Button android:id="@id/sync_btn_1year" android:background="@drawable/blue_btn_simple" android:layout_width="300.0dip" android:layout_height="50.0dip" android:layout_marginBottom="10.0dip" android:text="@string/sync_1year" android:layout_below="@id/sync_btn_1month" android:layout_centerHorizontal="true" android:onClick="btn_1year" />
            <TextView android:textStyle="bold" android:id="@id/sync_active_features" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="32.0dip" android:text="FEATURES" android:layout_below="@id/textView" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </ScrollView>
    <ProgressBar android:id="@id/sync_progressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:layout_below="@id/include_actionbar_simple" android:layout_centerHorizontal="true" />
</RelativeLayout>
